# edinet

./: .gitattributes  .gitignore  KANBAN.md  LICENSE  README.md  context7.json  jpigp_element_names.txt  pyproject.toml
docs/: BATCH.md  CODESCOPE.md  DEFACTO.md  Day10.md  Day12.md  Day13.md  Day14.md  Day15.md  Day16.md  Day17.md  Day3.md  Day4.5.md  Day4.md  Day5.md  Day6.md  Day7.5.md  Day7.md  Day8.QUESTIONS.md  Day9.md  FEATURES.md  FUTUREFEEDBACK.temp.md  FUTUREPLAN.tmp.md  IKO.md  INTEGRATION.md  MAINTENANCE.md  MEMO.md  NEXT.temp.md  NOW.md  PARQUET_BENCHMARK.md  PIPELINE_PERFORMANCE.md  PLAN.LIVING.md  PLAN.md  PLAYBOOK.PARALLEL.md  SCOPE.md  TEMP.md  V010.md  V031.md  WAVE_1_LANE_1.md  WAVE_1_LANE_1_FEEDBACK.md  WAVE_1_LANE_2.md  (+54 more)
reports/: 00_summary.md  01_site_structure.md  02_xbrl_taxonomy.md  03_stable_retrieval.md  nikkei225_coverage.json  nikkei225_coverage_v2.json  verify_tdnet.py
tests/: conftest.py  test_config.py  test_http.py  test_taxonomy_install.py  test_validators.py  test_wave6_integration.py
tools/: _bench_edinet_latency.py  _check_zip_structure.py  _compression_benchmark.py  _count_annual_docs.py  _inspect_fund_parse.py  _inspect_fund_zip.py  _probe_api_boundary.py  _probe_api_boundary_result.txt  _probe_doc_types.py  _probe_doc_types2.py  _probe_doc_types2_result.txt  _probe_doc_types_result.txt  _streaming_benchmark.py  bench_colab_latency.py  bench_doc_type_filter.py  bench_doc_type_filter_result.txt  day14_fallback_debug.py  day14_integration.py  day14_sweep.py  day14_sweep_extended.py  debug_toyota_consolidated.py  debug_toyota_output.txt  dump_securities_reports.py  e2e_download_check.py  extension_e2e.py  extension_e2e_deep.py  generate_edinet_codes.py  generate_form_codes.py  generate_fund_codes.py  hardcode_verification.py  historical_role_uri_check.py  historical_role_uri_results.txt  ixbrl_compare_final.py  ixbrl_compare_results.txt  (+67 more)
(+4236 files in other folders)
